Merge origin/VersionConTerminal
Conflicts:
	lib/absolutelayout/AbsoluteLayout.jar
	lib/nblibraries.properties
	src/src/presentacion/BorrarUsuario.form
	src/src/presentacion/BorrarUsuario.java
	src/src/presentacion/ControladorSesionVentana.java